@@ -1,6 +1,8 @@
 version 0.99.0 - XX-MMM-2010
  . Box2d: updated to r54 (issue #494)
  . Director: Only send "cleanup" when the scene is replaced (re fixed issue #709)
+ . Node: only uses bits as bools, when they are not properties (fixed issue #743)
+ . Node: relativeAnchorPoint renamed to isRelativeAnchorPoint (issue #XXX)
  . Sprite: use correct blending functions (issue #728)
  . Sprite: supports CGImageRef with key (issue #349)
  . Sprite: when texture is nil, supports opacity & color (issue #741)
